# lista-de-tarefas-fatto

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
todolist/: mydb.py
todolist/todolist/: settings.py  urls.py
todolist/website/: forms.py  models.py  urls.py  views.py
todolist/website/migrations/: 0001_initial.py  0002_alter_task_options_alter_task_view_order.py  0003_alter_task_task_name.py
todolist/website/templates/: add_task.html  base.html  home.html  navbar.html
