[project]
name = "lista-de-tarefas-fatto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
    "gunicorn>=24.1.1",
    "mysql>=0.0.3",
    "mysql-connector-python>=9.5.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
]
